--- a/_includes/welcome-in-focus-item.html
+++ b/_includes/welcome-in-focus-item.html
@@ -11,7 +11,7 @@
 			<p class="date mb-10">{{ post.date | date: "%d %B %Y" }}</p>
 		</div>
 	</div>
-	<div class="section-news-button">
+	<div class="section-news-button float-right mr-20">
     <a class="btn-sixsq mt-20 color-2" href="{{ post.url }}"><i class="fa fa-plus-square-o"></i>  Learn more</a>
 	  <a class="btn-sixsq mt-20 all" href="/media/news"><i class="fa fa-plus-square-o"></i>  All news</a>
 	</div>
