--- a/_includes/welcome-partners-item.html
+++ b/_includes/welcome-partners-item.html
@@ -6,6 +6,6 @@
 		<p>{{ post.content | strip_html | truncatewords: 30 }}</p>
 	</div>
 	<div class="section-news-button float-right ml-20">
-	  <a class="btn-sixsq mt-20 all" href="/partners"><i class="fa fa-plus-square-o"></i>  All partners</a>
+	  <a class="btn-sixsq mt-20 all" href="/about/partners"><i class="fa fa-plus-square-o"></i>  All partners</a>
 	</div>
 </div>
