--- a/sass/theme/_solutions-overview.scss
+++ b/sass/theme/_solutions-overview.scss
@@ -31,7 +31,7 @@
   	background-image: url(/img/content/Security_padlocks.jpg);
   }
   &.solution-nuvlacity-volumlight {
-  	background-image: url(/img/content/street_lighting.jpg);
+  	background-image: url(/img/banner/volumlight.png);
   }
   &.solution-nuvlaoutpost-remote-communities {
   	background-image: url(/img/content/street_lighting.jpg);
