--- a/_includes/about-sub-menu.html
+++ b/_includes/about-sub-menu.html
@@ -1,6 +1,6 @@
 		<!-- Start menu-product -->	
 		<section class="menu-product menu-product-{{ page.product }} pb-10 pt-20">
-        <nav class="navbar navbar-toggleable-sm navbar-inverse sub-navbar">
+        <nav class="container navbar navbar-toggleable-sm navbar-inverse sub-navbar">
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#subNavbarNavDropdown" aria-controls="subNavbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
