--- a/_includes/welcome-video.html
+++ b/_includes/welcome-video.html
@@ -3,15 +3,15 @@
 								<h2 class="pb-10 fw600">{{ post.title }}</h2>
 								<div class="widget-section text-center mt-20"><i class="fa fa-circle"></i></div>
 							</div>
-							<div class="content-video mb-15 video">
+							<div class="content-video mt-15 video">
 								<iframe width="100%" src="{{ post.link }}" frameborder="0" allowfullscreen></iframe>
 							</div>
-							<div class="desc">
+							<div class="desc mt-15">
 								<h3 class="fw600"><a href="{{ post.link }}">{{ post.subtitle }}</a></h3>
 								<p>{{ post.content }}</p>
 							</div>
 							<div class="section-news-button float-right">
-								<a class="btn-sixsq color-2" href="{{ post.link }}"><i class="fa fa-plus-square-o"></i>  Learn more</a>
+								<a class="btn-sixsq color-2" href="{{ post.link }}"><i class="fa fa-plus-square-o"></i>  Watch</a>
 								<a class="btn-sixsq all" href="/media/videos"><i class="fa fa-plus-square-o"></i>  All videos</a>
 							</div>
 						</div>
