--- a/sass/theme/_section-news.scss
+++ b/sass/theme/_section-news.scss
@@ -48,14 +48,14 @@
 			}
 		}
 	}
-	.video-section{
+	.video-section {
+    margin-bottom: 30px;
 		@media (max-width: 767px) {
 			margin-top: 100px;
 			margin-bottom: 100px;
 		}
-		.content-video{
-			height: 47%;
-			margin-top: 30px;
+		.content-video {
+			height: 50%;
 			iframe {
 				height: 100%;
 				width: 100%;
