--- a/sass/theme/_section-services.scss
+++ b/sass/theme/_section-services.scss
@@ -7,147 +7,137 @@
 	@media (max-width: 767px) {
 		padding-bottom: 100px;
 	}
-		.services-volumlight{
-		background: url(../img/section-services/section-energy-saving.png) no-repeat;
-		background-repeat: no-repeat;
-		background-size: 100% auto;
-		background-position: center top;
-		height: 100%;
-		min-height: 1200px;
-		
-		@media (min-width: 1500px) and (max-width: 2000px) {
-			min-height: 930px;
-		}
-		@media (min-width: 992px) and (max-width: 1500px) {
-			background-size: cover;
-			min-height: 830px;
-			background-position: center center;
-		}
-		@media (min-width: 768px) and (max-width: 992px) {
-				background-size: cover;
-				min-height: 800px;
-				background-position: center center;
-			}
-		 @media (max-width: 767px) {
-			background-size: cover;
-			background-position: center center;
-		}
-		
-		.services-content {
-			height: auto;
-			padding-top: 210px;
-			
-			@media (min-width: 1500px) and (max-width: 2000px) {
-				padding-top: 170px;
-			}
-			@media (min-width: 768px) and (max-width: 992px) {
-				padding-top: 100px;
-			}
-			@media (max-width: 767px) {
-				padding-top: 280px;
-			}
-			
-			h2{
-			color: #fff;
-			font-size: 250%;
-			}
-			.line{
-				color: #fff;
-				background: #fff;
-				width: 50%;
-				text-align: left;
-				
-			}
-			p{
-				color:#fff;
-				font-size: 120%;
-			}
-			a {
-				color:#333;
-				background: #fff;
-			}
-		}
-
-	}
-		.services-smart-securing{
-			background: url(../img/section-services/smart-securing.png) no-repeat;
-			background-repeat: no-repeat;
-			background-size: 100% auto;
-			background-position: center top;
-			height: 100%;
-			min-height: 1200px;
-			
-			@media (min-width: 2000px) {
-				  min-height: 1200px;
-				  margin-top: -18%;
-				  
-			}
-			@media (min-width: 1500px) and (max-width: 2000px) {
-				 min-height: 1015px;
-				 margin-top: -20%;
-			}
-			@media (min-width: 992px) and (max-width: 1500px) {
-				background-size: cover;
-				min-height: 830px;
-				margin-top: -20%;
-				background-position: center center;
-			}
-			@media (min-width: 768px) and (max-width: 992px) {
-				background-size: cover;
-				margin-top: -30%;
-				min-height: 800px;
-				background-position: center center;
-			}
-			@media (max-width: 767px) {
-				background-size: cover;
-				margin-top: -83%;
-				background-position: center center;
-			}
-				
-
-		.services-content {
-			height: auto;
-			padding-top: 210px;
-			@media (min-width: 2000px) {
-				padding-top: 390px;
-			}
-			@media (min-width: 1500px) and (max-width: 2000px) {
-				padding-top: 300px;
-			}
-			@media (min-width: 992px) and (max-width: 1500px) {
-				padding-top: 250px;
-			}
-			@media (min-width: 768px) and (max-width: 992px) {
-				padding-top: 200px;
-			}
-			@media (max-width: 767px) {
-				padding-top: 270px;
-			}			
-			h2{
-			color: #333;
-			font-size: 250%;
-			}
-			.line{
-				color: #333;
-				background: #333;
-				width: 50%;
-				text-align: left;
-				
-			}
-			p{
-				color:#333;
-				font-size: 120%;
-			}
-			a{
-				color: #fff;
-				border: 1px solid #333;
-				background: #333;
-			}
-		}
-
-	}
+  	.services-volumlight {
+  	background: url(/img/section-services/section-energy-saving.png) no-repeat;
+  	background-repeat: no-repeat;
+  	background-size: 100% auto;
+  	background-position: center top;
+  	height: 100%;
+  	min-height: 1200px;
 	
-	.services-satellite{
+  	@media (min-width: 1500px) and (max-width: 2000px) {
+  		min-height: 930px;
+  	}
+  	@media (min-width: 992px) and (max-width: 1500px) {
+  		background-size: cover;
+  		min-height: 830px;
+  		background-position: center center;
+  	}
+  	@media (min-width: 768px) and (max-width: 992px) {
+  			background-size: cover;
+  			min-height: 800px;
+  			background-position: center center;
+  		}
+  	 @media (max-width: 767px) {
+  		background-size: cover;
+  		background-position: center center;
+  	}
+  	.services-content {
+  		height: auto;
+  		padding-top: 210px;	
+  		@media (min-width: 1500px) and (max-width: 2000px) {
+  			padding-top: 170px;
+  		}
+  		@media (min-width: 768px) and (max-width: 992px) {
+  			padding-top: 100px;
+  		}
+  		@media (max-width: 767px) {
+  			padding-top: 280px;
+  		}
+  		h2 {
+  		color: #fff;
+  		font-size: 250%;
+  		}
+  		.line {
+  			color: #fff;
+  			background: #fff;
+  			width: 50%;
+  			text-align: left;
+  		}
+  		p {
+  			color:#fff;
+  			font-size: 120%;
+  		}
+  		a {
+  			color:#333;
+  			background: #fff;
+  		}
+  	}
+  }
+  .services-smart-securing {
+  	background: url(../img/section-services/smart-securing.png) no-repeat;
+  	background-repeat: no-repeat;
+  	background-size: 100% auto;
+  	background-position: center top;
+  	height: 100%;
+  	min-height: 1200px;
+  	@media (min-width: 2000px) {
+  		  min-height: 1200px;
+  		  margin-top: -18%;
+		  
+  	}
+  	@media (min-width: 1500px) and (max-width: 2000px) {
+  		 min-height: 1015px;
+  		 margin-top: -20%;
+  	}
+  	@media (min-width: 992px) and (max-width: 1500px) {
+  		background-size: cover;
+  		min-height: 830px;
+  		margin-top: -20%;
+  		background-position: center center;
+  	}
+  	@media (min-width: 768px) and (max-width: 992px) {
+  		background-size: cover;
+  		margin-top: -30%;
+  		min-height: 800px;
+  		background-position: center center;
+  	}
+  	@media (max-width: 767px) {
+  		background-size: cover;
+  		margin-top: -83%;
+  		background-position: center center;
+  	}
+  	.services-content {
+  		height: auto;
+  		padding-top: 210px;
+  		@media (min-width: 2000px) {
+  			padding-top: 390px;
+  		}
+  		@media (min-width: 1500px) and (max-width: 2000px) {
+  			padding-top: 300px;
+  		}
+  		@media (min-width: 992px) and (max-width: 1500px) {
+  			padding-top: 250px;
+  		}
+  		@media (min-width: 768px) and (max-width: 992px) {
+  			padding-top: 200px;
+  		}
+  		@media (max-width: 767px) {
+  			padding-top: 270px;
+  		}			
+  		h2 {
+  		color: #333;
+  		font-size: 250%;
+  		}
+  		.line {
+  			color: #333;
+  			background: #333;
+  			width: 50%;
+  			text-align: left;
+			
+  		}
+  		p {
+  			color:#333;
+  			font-size: 120%;
+  		}
+  		a {
+  			color: #fff;
+  			border: 1px solid #333;
+  			background: #333;
+  		}
+  	}
+  }
+	.services-satellite {
 		background: url(../img/section-services/section-satellite.png) no-repeat;
 		background-repeat: no-repeat;
 		background-size: 100% auto;
@@ -156,37 +146,33 @@
 		min-height: 1200px;
 		position: relative;
 		z-index: 110;
-		
-			
-			@media (min-width: 2000px) {
-				  min-height: 1330px;
-				  margin-top: -19%;
-				  
-			}
-			@media (min-width: 1500px) and (max-width: 2000px) {
-				 min-height: 1050px;
-				 margin-top: -25%;
-			}
-			@media (min-width: 992px) and (max-width: 1500px) {
-				background-size: cover;
-				min-height: 830px;
-				margin-top: -20%;
-				background-position: center center;
-			}
-			@media (min-width: 768px) and (max-width: 992px) {
-				background-size: cover;
-				margin-top: -30%;
-				min-height: 800px;
-				background-position: center center;
-			}
-			 @media (max-width: 767px) {
-				background-size: cover;
-				background-position: center center;
-				margin-top: -84%;
-				z-index: 109;
-			}
-			
-
+		@media (min-width: 2000px) {
+			  min-height: 1330px;
+			  margin-top: -19%;
+			  
+		}
+		@media (min-width: 1500px) and (max-width: 2000px) {
+			 min-height: 1050px;
+			 margin-top: -25%;
+		}
+		@media (min-width: 992px) and (max-width: 1500px) {
+			background-size: cover;
+			min-height: 830px;
+			margin-top: -20%;
+			background-position: center center;
+		}
+		@media (min-width: 768px) and (max-width: 992px) {
+			background-size: cover;
+			margin-top: -30%;
+			min-height: 800px;
+			background-position: center center;
+		}
+		 @media (max-width: 767px) {
+			background-size: cover;
+			background-position: center center;
+			margin-top: -84%;
+			z-index: 109;
+		}
 		.services-content {
 			height: auto;
 			@media (min-width: 2000px) {
@@ -207,18 +193,18 @@
 			@media (min-width: 480px) and (max-width: 767px) {
 				padding-top: 200px;
 			}			
-			h2{
+			h2 {
 			color: #fff;
 			font-size: 250%;
 			}
-			.line{
+			.line {
 				color: #fff;
 				background: #fff;
 				width: 50%;
 				text-align: left;
 				
 			}
-			p{
+			p {
 				color:#fff;
 				font-size: 120%;
 			}
@@ -228,7 +214,7 @@
 			}
 		}
 	}
-	.services-eosc{
+	.services-eosc {
 		background: url(../img/section-services/section-eosc.png) no-repeat;
 		background-repeat: no-repeat;
 		background-size: 100% auto;
@@ -268,7 +254,6 @@
 			z-index: 110;
 			background-position: center center;
 		}
-			
 		.services-content {
 			padding-top: 350px;
 			height: auto;
@@ -281,17 +266,15 @@
 			@include tablet {
 				padding-top: 200px;
 			}				
-			h2{
+			h2 {
 			color: #0C79C5;
 			font-size: 250%;
 			}
-			.line{
-
+			.line {
 				width: 50%;
 				text-align: left;
-				
 			}
-			p{
+			p {
 				color:#999;
 				font-size: 120%;
 			}
@@ -302,7 +285,6 @@
 				display: inline-block;
 			}
 			a {
-
 				background: #333;
 			}
 		}
