--- a/_layouts/nuvlabox-spec.html
+++ b/_layouts/nuvlabox-spec.html
@@ -13,12 +13,12 @@
       				<span><h2 class="pb-10 fw700">Select your</h2></span><span class="title-image-product"></span>
       			</div>
       		</div>
-      		<div id="hpe" class="row justify-content-center mb-20">
+      		<div id="hpe" class="row justify-content-center mb-20 hardware-provider">
       			<div class="col-md-12 section-title text-center">
       				<h2 class="pb-10 fw700">For industrial applications with partner:</h2>
       			</div>
       			<div class="col-md-12 text-center mt-20">
-              <img src="/img/content/Hewlett_Packard_Enterprise_logo.png" alt="hpe logo" width="30%">
+              <img src="/img/content/Hewlett_Packard_Enterprise_logo.png" alt="hpe logo" width="70%">
       			</div>
       		</div>
           <div class="row justify-content-center products-view icon-is-it-for mt-50 mb-50">
@@ -32,7 +32,7 @@
               {% endif %}
             {% endfor %}
       		</div>
-          <div id="logic-supply" class="row justify-content-center mb-20">
+          <div id="logic-supply" class="row justify-content-center mb-20 hardware-provider">
             <div class="col-md-12 section-title text-center">
               <h2 class="pb-10 fw700">For desktop applications with partner:</h2>
             </div>
