--- a/sass/theme/_solutions-overview.scss
+++ b/sass/theme/_solutions-overview.scss
@@ -7,6 +7,9 @@
 	position: relative;
 	z-index: 100;
   padding: 60px 0;
+	@include mobile {
+    background-size: auto 100%;
+  }
   .content {
     height: auto;
     color: white !important;
