--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -42,7 +42,7 @@
             </div>
             <h3 class="mt-20 text-center fw600">e-Guides</h3>
 						<p class="mt-10 text-center">Read about our products and services.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/eguides"><i class="fa fa-plus-square-o"></i>  Read</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/eguides"><i class="fa fa-plus-square-o"></i>  Learn</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-12 item icon animated text-center">
             <div class="icon-title">
@@ -50,7 +50,7 @@
             </div>
             <h3 class="mt-20 text-center fw600">Solution Briefs</h3>
 						<p class="mt-10 text-center">Read about our solutions.</p>
-            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/solution-briefs"><i class="fa fa-plus-square-o"></i>  Read</a>
+            <a class="btn-sixsq mt-20 color-3 text-center" href="/media/solution-briefs"><i class="fa fa-plus-square-o"></i>  Explore</a>
 					</div>
         </div>
 			</div>
