--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,17 +1,10 @@
 <head>
-	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- Author Meta -->
 	<meta name="author" content="SixSq Sàrl">
-	<!-- Meta Description -->
-	<meta name="description" content="Smart cloud and edge computing products, services and solutions. Our solutions: NuvlaCity, NuvlaScience and NuvlaOutpost enable our partners and customers to build next generation IT solutions for Smart City, Industry 4.0, machine learning and big data applications.">
-	<!-- Meta Keyword -->
-	<meta name="keywords" content="">
-	<!-- meta character set -->
+	<meta name="description" content="{% if page.summary %}{{ page.summary }}{% else %}Smart cloud and edge computing products, services and solutions. Our solutions: NuvlaCity, NuvlaScience and NuvlaOutpost enable our partners and customers to build next generation IT solutions for Smart City, IoT, Industry 4.0, machine learning and big data applications.{% endif %}">
+	<meta name="keywords" content="{% if page.meta-keywords %}{{ page.meta-keywords }}{% else %}cloud computing, edge computing, Nuvla, NuvlaBox, NuvlaCity, NuvlaScience, NuvlaOutpost, Smart City, Industry 4.0, machine learning, big data, IoT{% endif %}">
 	<meta charset="UTF-8">
-	<!-- Site Title -->
-	<title>SixSq | Smart and secure cloud and edge software solutions for IoT, Smart City and Big Data</title>
-
+	<title>SixSq | {{ page.title }}</title>
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i" rel="stylesheet"> 
 
 	<!--
