--- a/_includes/media-sub-menu.html
+++ b/_includes/media-sub-menu.html
@@ -10,22 +10,22 @@
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-overview" href="/media/overview">Overview</a>
+                <a class="nav-link" id="navbarMenuLink-overview" href="/media/overview.html">Overview</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-news" href="/media/news">News</a>
+                <a class="nav-link" id="navbarMenuLink-news" href="/media/news.html">News</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-videos" href="/media/videos">Videos</a>
+                <a class="nav-link" id="navbarMenuLink-videos" href="/media/videos.html">Videos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="navbarMenuLink-blog" href="http://media.sixsq.com/blog">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-eguides" href="/media/eguides">eGuides</a>
+                <a class="nav-link" id="navbarMenuLink-eguides" href="/media/eguides.html">eGuides</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-solution-briefs" href="/media/solution-briefs">Solution Briefs</a>
+                <a class="nav-link" id="navbarMenuLink-solution-briefs" href="/media/solution-briefs.html">Solution Briefs</a>
               </li>
             </ul>
           </div>
