--- a/_includes/overview-sub-menu.html
+++ b/_includes/overview-sub-menu.html
@@ -10,7 +10,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" id="navbarMenuLink-overview" href="/{{ page.category }}/{{ page.product }}/overview">Overview</a>
+                <a class="nav-link active" id="navbarMenuLink-overview" href="/{{ page.category }}/{{ page.product }}/overview.html">Overview</a>
               </li>
             </ul>
           </div>
