--- a/_includes/products-sub-menu.html
+++ b/_includes/products-sub-menu.html
@@ -10,13 +10,13 @@
           <div class="collapse navbar-collapse justify-content-end" id="subNavbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-overview" href="/products-and-services/{{ page.product-name }}/overview">Overview</a>
+                <a class="nav-link" id="navbarMenuLink-overview" href="/products-and-services/{{ page.product}}/overview.html">Overview</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-features" href="/products-and-services/{{ page.product-name }}/features">Features</a>
+                <a class="nav-link" id="navbarMenuLink-features" href="/products-and-services/{{ page.product }}/features.html">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product-name }}/tech-spec">Tech Specs</a>
+                <a class="nav-link" id="navbarMenuLink-tech-spec" href="/products-and-services/{{ page.product }}/tech-spec.html">Tech Specs</a>
               </li>
             </ul>
           </div>
