Update welcome page with latest news and upcoming event

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -249,15 +249,15 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h2>HPE Discover Madrid</h2>
+                    <h2>Light + Building</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/news/Discover-madrid-2017.jpeg" alt="news"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/news/logo_lightandbuilding.jpeg" alt="news"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Join SixSq at HPE's largest IT event of the year to find out about digital transformation, hybrid IT and the intelligent edge. <center>
-                            <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/11/26/news-hpe-discover-november-2017.html">Read more &raquo;</a>
+                  <p>Join SixSq at the world’s leading trade fair for lighting and building services technology. Meet designers, planners and engineers from around the world and see the latest innovations in lighting.<center>
+                            <a class="btn btn-primary btn-lg" role="button" href="https://light-building.messefrankfurt.com/frankfurt/en.html">Read more &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
@@ -269,17 +269,17 @@
               <div>
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2>Latest Blog</h2>
-                     <h2>Improving Emergency Situation Management in Smart Cities</h2>
+                    <h2>Latest News</h2>
+                     <h2>Smart Lighting Wins Swiss Watt d'Or Prize</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_mf2c.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 140px;" src="/img/content/logo_volumlight.png" alt="blog"/></center>
                   </div>
                 </div>
                 </div>
-                <p>Find out how the mF2C project is using edge computing solutions to improve city services.</p>
+                <p>Congratulations to Schréder Swiss for winning this prestigious in partnership with EKZ.</p>
                 <center>  
-                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/improving-emergency-situation-management-smart-cities">Find out about Fog &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2018/01/18/news-wattdor-volumlight-january-2018.html">Read all about it &raquo;</a>
                 </center>
               </div>
             </div>
