Small correction to homepage

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -277,7 +277,7 @@
                   </div>
                 </div>
                 </div>
-                <p>Congratulations to Schréder Swiss for winning this prestigious in partnership with EKZ.</p>
+                <p>Congratulations to Schréder Swiss for winning this prestigious award in partnership with EKZ.</p>
                 <center>  
                     <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2018/01/18/news-wattdor-volumlight-january-2018.html">Read all about it &raquo;</a>
                 </center>
